fix(home): Avoid signup link overflow on login button

--- a/src/popup/scss/pages.scss
+++ b/src/popup/scss/pages.scss
@@ -69,6 +69,12 @@ app-home {
             }
         }
     }
+
+    .signup-link {
+        display: block;
+        text-align: center;
+        margin-top: 32px;
+    }
 }
 
 body.body-sm, body.body-xs {
